[gd_scene load_steps=10 format=2]

[ext_resource path="res://Juego/UI/HUD/Kenney Future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Juego/UI/HUD/glassPanel_corners.png" type="Texture" id=2]
[ext_resource path="res://Juego/UI/HUD/ContenedorInformacion.gd" type="Script" id=3]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "mostar_suavizado"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "mostrar"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "ocultar"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "ocultar_suavizado"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 1 )

[node name="ContenedorInformacion" type="NinePatchRect"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 407.0
margin_bottom = 168.0
texture = ExtResource( 2 )
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 13
patch_margin_bottom = 13
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/mostar_suavizado = SubResource( 3 )
anims/mostrar = SubResource( 4 )
anims/ocultar = SubResource( 5 )
anims/ocultar_suavizado = SubResource( 6 )

[node name="Label" type="Label" parent="."]
margin_right = 407.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 1 )
text = "en zona de recarga"
align = 1
valign = 1
autowrap = true

[node name="AutoOcultarTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="AutoOcultarTimer" to="." method="_on_AutoOcultarTimer_timeout"]
